horizontal overflow : bug fixed

--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -6,7 +6,6 @@ p {
     position: absolute;
     left: 217px ;
     top: 140px;
-    width: 80%;
   }
 
 #chartsAndSummariesContainer {
